# tiptoi-manager

./: .gitignore  README.md  pyproject.toml
data/: io.github.tiptoi_linux.TiptoiManager.desktop  io.github.tiptoi_linux.TiptoiManager.metainfo.xml
packaging/: io.github.tiptoi_linux.TiptoiManager.yaml
tests/: test_catalog.py  test_pen.py
tiptoi_gtk/: __init__.py  application.py  main.py  window.py
tiptoi_gtk/backend/: catalog.py  downloader.py  gme.py  pen.py  settings_manager.py
tiptoi_gtk/data/: tiptoi-gtk.desktop
tiptoi_gtk/dialogs/: preferences.py
tiptoi_gtk/locale/en/LC_MESSAGES/: tiptoi-gtk.mo  tiptoi-gtk.po
tiptoi_gtk/model/: product.py
tiptoi_gtk/views/: download_manager.py  downloads_view.py  pen_view.py  search_view.py
